--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="JsAlarm.css">
+    <script src="https://kit.fontawesome.com/5daf43d836.js" crossorigin="anonymous"></script>
     <title>Alarm Clock | Ola BIMA</title>
 </head>
 <body>
@@ -12,7 +13,7 @@
     <div class="house">
          <!-- (0) LIVE TIME -->
 <div id="ctime">
-    <h1 class="header">ALARM</h1>
+    <h1 class="header">ALARM <i class="far fa-bell"></i></h1>
     <div class="square">
       <div class="digits" id="chr">00</div>
       <div class="text">HR</div>
